# DS_CP

DS_CP/GenomicSearch/: CMakeLists.txt  GenomeIndexer.cpp  GenomeIndexer.hpp  app.py  inputs.txt  main.cpp  synthetic_dna.txt
DS_CP/GenomicSearch/templates/: index.html
